[package]
name = "pr-finder"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
graphql_client = "0.14.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = "1.0.214"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
opt-level = "z"
